logs/clarissa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Clarissa-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/ClarissaPackages'...
Compiling './lib/python3.5/site-packages/ClarissaPackages/bot.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/bot.py", line 24
    print "You can only run one instance of Clarissa."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/bot_learn.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/bot_learn.py", line 2
    print "Learning data"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/bot_response.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/bot_response.py", line 4
    print "Clarissa: Hi"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/logger.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/logger.py", line 5
    print log.read()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ClarissaPackages/main.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/main.py", line 3
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/setup.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/setup.py", line 30
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/update.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/update.py", line 1
    print "Updating Clarissa"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ClarissaPackages/writer.py'...
***   File "./lib/python3.5/site-packages/ClarissaPackages/writer.py", line 39
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ClarissaPackages3'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
